test_programs/typing/wrong_ptr.tip
main() {
    var n, r1;

    r1 = 10;
    *r1 = 1;   // expected-error{{Cannot derefence type Int}}
    return r1;
}
